# miyo-prototype-beta

./: .gitignore  README.md  gradle.properties  settings.gradle.kts
.github/workflows/: android-beta.yml
composeApp/: build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/assets/node-connect/: index.html  node-connect.js
composeApp/src/androidMain/kotlin/com/nekomiyo/miyo/: MainActivity.kt
composeApp/src/androidMain/res/drawable/: bg_miyo_pattern.xml  ic_miyo_action_choice.xml  ic_miyo_action_text.xml  ic_miyo_library.xml  ic_miyo_logo.xml  ic_miyo_node.xml  ic_miyo_preview.xml
composeApp/src/androidMain/res/values/: styles.xml
composeApp/src/commonMain/kotlin/com/nekomiyo/miyo/: App.kt  MiyoApp.kt
composeApp/src/iosMain/kotlin/com/nekomiyo/miyo/: MainViewController.kt
docs/architecture/: canonical-model.md  cpp-core-boundary.md  editor-modes.md  first-pass-architecture.md  milestone-1-acceptance.md  part-10-hardening.md  part-3-storage-model.md  part-4-simple-mode.md  part-5-asset-system.md  part-6-node-connect.md  part-7-code-mode.md  part-8-runtime-preview.md  part-9-export-import.md  webview-node-bridge.md
docs/design/: design-system.md
gradle/: libs.versions.toml
iosApp/iosApp/: ContentView.swift  Info.plist
native/: CMakeLists.txt
native/include/: miyo_engine.h
native/src/: miyo_engine.cpp
node-web/: message-schema.md  node-connect.css
src/androidMain/kotlin/com/nekomiyo/miyo/nativeengine/: MiyoNativeEngine.android.kt
src/iosMain/kotlin/com/nekomiyo/miyo/nativeengine/: MiyoNativeEngine.ios.kt
(+26 files in other folders)
